--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.rafaelarnosti.androidrestapp.MainActivity">
+    tools:context="com.rafaelarnosti.androidrestapp.MainActivity"
+    android:background="#aaaa">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvAndroids"
