--- a/app/src/main/res/layout/android_row.xml
+++ b/app/src/main/res/layout/android_row.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,11 +20,16 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tvTitulo"/>
+            android:id="@+id/tvTitulo"
+            android:textSize="26sp"
+            android:fontFamily="cursive"
+            />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tvSubTitulo"/>
+            android:id="@+id/tvSubTitulo"
+            android:layout_gravity="center"
+            android:textSize="20sp"/>
 
     </LinearLayout>
 
